src/components/status.css
/* REBLOG + REPLY-TO */

.status-reblog {
  background: linear-gradient(
    160deg,
    var(--reblog-faded-color),
    transparent min(160px, 50%)
  );
}
.status-reply-to {
  background: linear-gradient(
    160deg,
    var(--reply-to-faded-color),
    transparent min(160px, 50%)
  );
}
.status-reblog .status-reply-to {
  background: linear-gradient(
    -20deg,
    var(--reply-to-faded-color),
    transparent min(160px, 50%)
  );
}
.visibility-direct {
  --yellow-stripes: repeating-linear-gradient(
    -45deg,
    var(--reply-to-faded-color),
    var(--reply-to-faded-color) 10px,
    var(--reply-to-faded-color) 10px,
    transparent 10px,
    transparent 20px
  );
  /* diagonal stripes of yellow */
  background-image: var(--yellow-stripes);
}

/* STATUS PRE META */

.status-pre-meta {
  line-height: 1.4;
  padding: 8px 16px 0;
  opacity: 0.75;
  font-size: smaller;
  vertical-align: middle;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  margin-bottom: -8px;
}
.status-pre-meta .name-text {
  display: inline;
}
.status-pre-meta > * {
  vertical-align: middle;
}
.status-reblog .status-pre-meta .icon {
  color: var(--reblog-color);
  margin-right: 4px;
}

/* STATUS */

.status {
  display: flex;
  padding: 16px 16px 20px;
  line-height: 1.4;
  align-items: flex-start;
  position: relative;
}
@media (min-width: 40em) {
  .status {
    padding-bottom: 16px;
  }
}
.status.large {
  --fade-in-out-bg: linear-gradient(
    to bottom,
    transparent,
    var(--bg-color) 70px,
    var(--bg-color) calc(100% - 50px),
    transparent
  );
  padding-bottom: 8px;
  background-image: var(--fade-in-out-bg);
}
.status.large.visibility-direct {
  background-image: var(--fade-in-out-bg), var(--yellow-stripes);
}

@keyframes skeleton-breathe {
  0% {
    opacity: 1;
  }
  40% {
    opacity: 0.4;
  }
  100% {
    opacity: 1;
  }
}
.status.skeleton {
  color: var(--outline-color);
  animation: skeleton-breathe 6s linear infinite;
  user-select: none;
  pointer-events: none;
  contain: layout;
  text-rendering: optimizeSpeed;
}
.status.skeleton > .avatar {
  background-color: var(--outline-color);
}

.status.filtered {
  padding-block: 12px;
  display: flex;
  gap: 8px;
  align-items: center;
}
.status.filtered .status-filtered-info {
  pointer-events: none;
  flex-grow: 1;
  font-size: 90%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  mask-image: linear-gradient(to right, black 90%, transparent);
  position: relative;
}
.status.filtered .avatar {
  opacity: 0.5;
  transition: opacity 0.7s ease-in;
}
.status.filtered:is(:hover, :focus, :active) .avatar {
  opacity: 1;
}
.status.filtered :is(.status-filtered-info-1, .status-filtered-info-2) {
  transition: all 0.2s ease-out;
}
.status.filtered:hover :is(.status-filtered-info-1, .status-filtered-info-2) {
  transition-delay: 0.5s;
}
.status.filtered .status-filtered-info-1 {
  opacity: 0.5;
}
.status.filtered:is(:hover, :focus, :active) .status-filtered-info-1 {
  opacity: 0;
}
.status.filtered .status-filtered-info-2 {
  opacity: 0;
  transform: translateX(8px);
  position: absolute;
  left: 0;
}
.status.filtered:is(:hover, :focus, :active) .status-filtered-info-2 {
  opacity: 0.75;
  transform: translateX(0);
}

.status.compact-thread {
  display: flex;
  gap: 8px;
  padding-block: 8px;
}
.status.compact-thread .status-thread-badge {
  flex-shrink: 0;
  min-width: 50px;
  justify-content: center;
}
.status.compact-thread .content-compact {
  overflow: hidden;
  display: -webkit-box;
  display: box;
  -webkit-box-orient: vertical;
  box-orient: vertical;
  -webkit-line-clamp: 2;
  line-clamp: 2;
  font-size: 90%;
}

.status .container {
  flex-grow: 1;
  min-width: 0;
}
.status:not(.small) .container {
  padding-left: 12px;
}

.status > .container > .meta {
  display: flex;
  gap: 8px;
  justify-content: space-between;
  white-space: nowrap;
}
.status.small > .container > .meta {
  margin-bottom: 4px;
}
.status > .container > .meta > * {
  min-width: 0;
  overflow: hidden;
  text-overflow: ellipsis;
}
.status.large > .container > .meta {
  min-height: 50px;
}
.status > .container > .meta .arrow {
  color: var(--reply-to-color);
  vertical-align: middle;
}
.status > .container > .meta :is(.time, .edited) {
  color: inherit;
  text-align: end;
  opacity: 0.5;
  text-decoration: none;
  flex-shrink: 0;
  margin-left: 4px;
  white-space: nowrap;
}
.status > .container > .meta a.time {
  position: relative;
  overflow: visible;
}
.status > .container > .meta a.time:is(:hover, :focus) {
  text-decoration: underline;
}
.status > .container > .meta a.time:active,
.status > .container > .meta a.time.is-open {
  text-decoration: none;
  opacity: 1;
}
.status > .container > .meta a.time:after {
  content: '';
  position: absolute;
  inset: -16px;
}
.status > .container > .meta .reply-to {
  opacity: 0.5;
  font-size: smaller;
}

.status-reply-badge {
  display: inline-flex;
  margin-left: 4px;
  gap: 4px;
  align-items: center;
}
.status-reply-badge .icon {
  color: var(--reply-to-color);
}
.status-thread-badge {
  display: inline-flex;
  margin: 4px 0 0 0;
  gap: 4px;
  align-items: center;
  color: var(--reply-to-text-color);
  background: var(--bg-color);
  border: 1px solid var(--reply-to-color);
  border-radius: 4px;
  padding: 4px;
  font-size: 10px;
  line-height: 1;
  text-transform: uppercase;
  opacity: 0.75;
  background-image: repeating-linear-gradient(
    -70deg,
    transparent,
    transparent 3px,
    var(--reply-to-faded-color) 3px,
    var(--reply-to-faded-color) 4px
  );
  font-weight: bold;
}
/* ... */

